--- a/hbase/hbase-customwrapper-5.5/pom.xml
+++ b/hbase/hbase-customwrapper-5.5/pom.xml
@@ -7,14 +7,15 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>denodo-hdfs-customwrapper-5.0</artifactId>
-    <version>20140811</version>
+    <artifactId>denodo-hbase-customwrapper-5.5</artifactId>
+    <version>20140905</version>
     <packaging>jar</packaging>
-    <name>denodo-hdfs-customwrapper</name>
+    <name>denodo-hbase-customwrapper</name>
 
     <properties>
-        <avro.version>1.7.4</avro.version>
         <hadoop.version>2.4.0</hadoop.version>
+        <hbase.version>0.96.2-hadoop2</hbase.version>
+        <zookeeper.version>3.4.5</zookeeper.version>
     </properties>
 
     <!-- *************************** -->
@@ -30,28 +31,36 @@
                     <include>NOTICE.txt</include>
                 </includes>
             </resource>
+            
+            <resource>
+                <directory>../hbase-customwrapper-5.0/src/main/resources</directory>
+            </resource>
         </resources>
 
+        <sourceDirectory>../hbase-customwrapper-5.0/src/main/java</sourceDirectory>
         <!-- ============================================================== -->
         <!-- Test-related directory locations -->
         <!-- ============================================================== -->
-        <testSourceDirectory>src/test/java</testSourceDirectory>
-        <testOutputDirectory>target/test-classes</testOutputDirectory>
+        <testSourceDirectory>../hbase-customwrapper-5.0/src/test/java</testSourceDirectory>
+        <testOutputDirectory>../hbase-customwrapper-5.0/target/test-classes</testOutputDirectory>
         <testResources>
             <testResource>
-                <directory>src/test/resources</directory>
+                <directory>../hbase-customwrapper-5.0/src/test/resources</directory>
             </testResource>
         </testResources>
         <plugins>
+            <!-- ========================================================== -->
+            <!-- Compiler plugin -->
+            <!-- * Set the Java version (source and bytecode) to J2SE 6 -->
+            <!-- * Other possible values if required: "1.4" | "1.5" -->
+            <!-- ========================================================== -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <!-- org.apache.hadoop.* requires 1.6 -->
                     <source>1.6</source>
                     <target>1.6</target>
-                    <encoding>US-ASCII</encoding>
                 </configuration>
             </plugin>
             <plugin>
@@ -92,21 +101,28 @@
                         <Extension-Description>${project.name}</Extension-Description>
                         <Extension-Version>${project.version}</Extension-Version>
                         <Extension-Target-Version>5.0</Extension-Target-Version>
-                        <Extension-Target-Update>20130103</Extension-Target-Update>
+                        <!-- Uncomment when an update of VDP 5.5 is required -->
+                       <!-- <Extension-Target-Update>20140826</Extension-Target-Update> -->
                         <Extension-Website>http://support.denodo.com</Extension-Website>
                       </manifestEntries>
                     </manifestSection>
                   </manifestSections>
                 </archive>
               </configuration>
-            </plugin>            
-        
+            </plugin>
+
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                     <finalName>${project.artifactId}-${project.version}-jar-with-dependencies</finalName>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-shade-plugin</artifactId>
+              <version>2.3</version>
+              <executions>
+                <execution>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>shade</goal>
+                  </goals>
+                  <configuration>
+                    <outputFile>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</outputFile>
                     <filters>
                       <filter>
                         <artifact>*:*</artifact>
@@ -114,34 +130,10 @@
                           <exclude>META-INF/maven/**/*</exclude>
                         </excludes>
                       </filter>
-                    </filters>                     
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                            <!--Symptom: 
-                                Custom wrapper throws "IOException: No FileSystem for scheme: 
-                                hdfs" because differents JARs (hadoop-commons for LocalFileSystem, hadoop-hdfs 
-                                for DistributedFileSystem) each contain a different file called org.apache.hadoop.fs.FileSystem 
-                                in their META-INFO/services directory. When we use maven-assembly, it merges 
-                                all our JARs into one, and all META-INFO/services/org.apache.hadoop.fs.FileSystem 
-                                overwrite each-other. Only one of these files remains (the last one that 
-                                was added). In this case, the Filesystem list from hadoop-commons overwrites 
-                                the list from hadoop-hdfs, so DistributedFileSystem was no longer declared. 
-                                
-                                Solution: 
-                                Use maven-shade plugin to merge services files when building JAR 
-                                with dependencies -->
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                            </transformers>
-                        </configuration>
-                    </execution>
-                </executions>
+                    </filters>
+                  </configuration>
+                </execution>
+              </executions>
             </plugin>
 
             <plugin>
@@ -175,6 +167,7 @@
     <!-- DEPENDENCIES -->
     <!-- ****************************************************************** -->
     <dependencies>
+        <!-- Custom Wrapper necessary libraries -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -182,53 +175,27 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--Custom Wrapper required libraries -->
         <dependency>
             <groupId>com.denodo.commons</groupId>
             <artifactId>denodo-util</artifactId>
-            <version>2.72</version>
+            <version>2.79</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.denodo.vdp</groupId>
             <artifactId>denodo-vdp-server-base</artifactId>
-            <version>5.0.0_2</version>
+            <version>5.0.0_4</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.denodo.vdp</groupId>
+            <artifactId>denodo-vdp-server-ext</artifactId>
+            <version>5.0.0_4</version>
             <scope>provided</scope>
         </dependency>
         <!-- *** -->
-
-        <dependency>
-            <groupId>org.apache.avro</groupId>
-            <artifactId>avro</artifactId>
-            <version>${avro.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.jboss.netty</groupId>
-                    <artifactId>netty</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jetty</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jetty-util</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -250,7 +217,7 @@
                 <exclusion>
                   <groupId>commons-logging</groupId>
                   <artifactId>commons-logging-api</artifactId>
-                </exclusion>                
+                </exclusion>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-math3</artifactId>
@@ -299,78 +266,92 @@
                   <groupId>net.java.dev.jets3t</groupId>
                   <artifactId>jets3t</artifactId>
                 </exclusion>
-            </exclusions>                        
+            </exclusions>
         </dependency>
-        
+
         <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-hdfs</artifactId>
-            <version>${hadoop.version}</version>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>${hbase.version}</version>
             <exclusions>
                 <exclusion>
-                    <groupId>commons-cli</groupId>
-                    <artifactId>commons-cli</artifactId>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-core</artifactId>
                 </exclusion>
                 <exclusion>
-                  <groupId>commons-daemon</groupId>
-                  <artifactId>commons-daemon</artifactId>
-                </exclusion>                
-                <exclusion>
-                    <groupId>tomcat</groupId>
-                    <artifactId>jasper-runtime</artifactId>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-json</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet.jsp</groupId>
-                    <artifactId>jsp-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jetty</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.mortbay.jetty</groupId>
-                    <artifactId>jetty-util</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>hsqldb</groupId>
-                    <artifactId>hsqldb</artifactId>
+                  <groupId>com.sun.jersey</groupId>
+                  <artifactId>jersey-server</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
-        
-        
 
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.2.1</version>
-            <scope>compile</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>com.hadoop.gplcompression</groupId>
-            <artifactId>hadoop-lzo</artifactId>
-            <version>0.4.16</version>
-            <scope>compile</scope>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
+        <dependency>
+        	<groupId>org.apache.zookeeper</groupId>
+        	<artifactId>zookeeper</artifactId>
+        	<version>${zookeeper.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.netty</groupId>
+                    <artifactId>netty</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+        	<groupId>org.apache.thrift</groupId>
+        	<artifactId>libfb303</artifactId>
+        	<version>0.9.0</version>
+        </dependency>        
+        
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+        
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
             <artifactId>denodo-hdfs-lib</artifactId>
             <version>20140822</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                     <groupId>org.apache.avro</groupId>
+                    <artifactId>avro-mapred</artifactId>
+                </exclusion>               
+                <exclusion>
+                     <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-hdfs</artifactId>
+                </exclusion>            
+            </exclusions>
         </dependency>
-
+        
         <dependency>
-            <groupId>net.java.dev.jets3t</groupId>
-            <artifactId>jets3t</artifactId>
-            <version>0.9.0</version>
-            <scope>compile</scope>
-        </dependency>
-
+            <groupId>com.denodo.connect.hadoop</groupId>
+            <artifactId>denodo-hbase-customwrapper-5.0</artifactId>
+            <version>20140904</version>
+            <scope>test</scope>
+        </dependency>        
+        
     </dependencies>
 </project>
