--- a/hdfs/hdfs-customwrapper-5.5/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.5/pom.xml
@@ -7,8 +7,8 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>denodo-hdfs-customwrapper-5.0</artifactId>
-    <version>20140811</version>
+    <artifactId>denodo-hdfs-customwrapper-5.5</artifactId>
+    <version>20140905</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
@@ -32,14 +32,15 @@
             </resource>
         </resources>
 
+         <sourceDirectory>../hdfs-customwrapper-5.0/src/main/java</sourceDirectory> 
         <!-- ============================================================== -->
         <!-- Test-related directory locations -->
         <!-- ============================================================== -->
-        <testSourceDirectory>src/test/java</testSourceDirectory>
+        <testSourceDirectory>../hdfs-customwrapper-5.0/src/test/java</testSourceDirectory>
         <testOutputDirectory>target/test-classes</testOutputDirectory>
         <testResources>
             <testResource>
-                <directory>src/test/resources</directory>
+                <directory>../hdfs-customwrapper-5.0/src/test/resources</directory>
             </testResource>
         </testResources>
         <plugins>
@@ -92,7 +93,8 @@
                         <Extension-Description>${project.name}</Extension-Description>
                         <Extension-Version>${project.version}</Extension-Version>
                         <Extension-Target-Version>5.0</Extension-Target-Version>
-                        <Extension-Target-Update>20130103</Extension-Target-Update>
+                        <!-- Uncomment when an update of VDP 5.5 is required -->
+                       <!-- <Extension-Target-Update>20140826</Extension-Target-Update> -->
                         <Extension-Website>http://support.denodo.com</Extension-Website>
                       </manifestEntries>
                     </manifestSection>
@@ -145,27 +147,26 @@
             </plugin>
 
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-assembly-plugin</artifactId>
-              <version>2.2-beta-5</version>
-              <executions>
-                <execution>
-                  <id>make-assembly-dist</id>
-                  <phase>package</phase>
-                  <goals>
-                    <goal>attached</goal>
-                  </goals>
-                  <configuration>
-                    <descriptors>
-                      <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
-                    </descriptors>
-                    <appendAssemblyId>true</appendAssemblyId>
-                    <finalName>${project.artifactId}-${project.version}</finalName>
-                  </configuration>
-                </execution>
-              </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2-beta-5</version>
+                 <executions>
+                    <execution>
+                        <id>make-assembly-dist</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <finalName>${project.artifactId}-${project.version}</finalName>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
-
         </plugins>
     </build>
 
