--- a/hdfs/hdfs-customwrapper-5.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper-5.0</artifactId>
-    <version>20151118</version>
+    <version>20151207</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
@@ -361,7 +361,7 @@
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
             <artifactId>denodo-hdfs-lib</artifactId>
-            <version>20151118</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
 
