--- a/commons/hadoop-commons-5.5/pom.xml
+++ b/commons/hadoop-commons-5.5/pom.xml
@@ -7,14 +7,18 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>denodo-hdfs-customwrapper-5.0</artifactId>
+    <artifactId>denodo-hadoop-commons-5.5</artifactId>
     <version>20160121</version>
     <packaging>jar</packaging>
-    <name>denodo-hdfs-customwrapper</name>
+    <name>${project.artifactId}</name>
 
     <properties>
         <avro.version>1.7.7</avro.version>
+        <commons-csv.version>1.0</commons-csv.version>
         <hadoop.version>2.6.0</hadoop.version>
+        <jets3t.version>0.9.0</jets3t.version>
+        <log4j.version>1.2.15</log4j.version>
+        <vdp.version>5.5.0_5</vdp.version>
     </properties>
 
     <!-- *************************** -->
@@ -31,18 +35,15 @@
                 </includes>
             </resource>
         </resources>
+        
+        <sourceDirectory>${basedir}/../hadoop-commons-5.0/src/main/java</sourceDirectory> 
 
-        <!-- ============================================================== -->
-        <!-- Test-related directory locations -->
-        <!-- ============================================================== -->
-        <testSourceDirectory>src/test/java</testSourceDirectory>
-        <testOutputDirectory>target/test-classes</testOutputDirectory>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-            </testResource>
-        </testResources>
         <plugins>
+            <!-- ========================================================== -->
+            <!-- Compiler plugin -->
+            <!-- * Set the Java version (source and bytecode) to J2SE 6 -->
+            <!-- * Other possible values if required: "1.4" | "1.5" -->
+            <!-- ========================================================== -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -77,95 +78,6 @@
                 </executions>
             </plugin>
 
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-jar-plugin</artifactId>
-              <version>2.4</version>
-              <configuration>
-                <archive>
-                  <addMavenDescriptor>false</addMavenDescriptor>
-                  <manifestSections>
-                    <manifestSection>
-                      <name>com.denodo</name>
-                      <manifestEntries>
-                        <Extension-Name>${project.artifactId}</Extension-Name>
-                        <Extension-Description>${project.name}</Extension-Description>
-                        <Extension-Version>${project.version}</Extension-Version>
-                        <Extension-Target-Version>5.0</Extension-Target-Version>
-                        <Extension-Target-Update>20130103</Extension-Target-Update>
-                        <Extension-Website>http://support.denodo.com</Extension-Website>
-                      </manifestEntries>
-                    </manifestSection>
-                  </manifestSections>
-                </archive>
-              </configuration>
-            </plugin>            
-        
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                     <finalName>${project.artifactId}-${project.version}-jar-with-dependencies</finalName>
-                    <filters>
-                      <filter>
-                        <artifact>*:*</artifact>
-                        <excludes>
-                          <exclude>META-INF/maven/**/*</exclude>
-                        </excludes>
-                      </filter>
-                    </filters>                     
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                            <!--Symptom: 
-                                Custom wrapper throws "IOException: No FileSystem for scheme: 
-                                hdfs" because differents JARs (hadoop-commons for LocalFileSystem, hadoop-hdfs 
-                                for DistributedFileSystem) each contain a different file called org.apache.hadoop.fs.FileSystem 
-                                in their META-INFO/services directory. When we use maven-assembly, it merges 
-                                all our JARs into one, and all META-INFO/services/org.apache.hadoop.fs.FileSystem 
-                                overwrite each-other. Only one of these files remains (the last one that 
-                                was added). In this case, the Filesystem list from hadoop-commons overwrites 
-                                the list from hadoop-hdfs, so DistributedFileSystem was no longer declared. 
-                                
-                                Solution: 
-                                Use maven-shade plugin to merge services files when building JAR 
-                                with dependencies -->
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                            </transformers>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-assembly-plugin</artifactId>
-              <version>2.2-beta-5</version>
-              <executions>
-                <execution>
-                  <id>make-assembly-dist</id>
-                  <phase>package</phase>
-                  <goals>
-                    <goal>attached</goal>
-                  </goals>
-                  <configuration>
-                    <descriptors>
-                      <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
-                    </descriptors>
-                    <appendAssemblyId>true</appendAssemblyId>
-                    <finalName>${project.artifactId}-${project.version}</finalName>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-
         </plugins>
     </build>
 
@@ -178,27 +90,11 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.15</version>
+            <version>${log4j.version}</version>
             <scope>provided</scope>
         </dependency>
 
-        <!--Custom Wrapper required libraries -->
-        <dependency>
-            <groupId>com.denodo.commons</groupId>
-            <artifactId>denodo-util</artifactId>
-            <version>2.72</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.denodo.vdp</groupId>
-            <artifactId>denodo-vdp-server-base</artifactId>
-            <version>5.0.0_2</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- *** -->
-
-        <dependency>
+       <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
             <version>${avro.version}</version>
@@ -231,6 +127,45 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro-mapred</artifactId>
+            <version>${avro.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.netty</groupId>
+                    <artifactId>netty</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty-util</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>${commons-csv.version}</version>
+            <scope>compile</scope>
+        </dependency>        
+
+        <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
             <version>${hadoop.version}</version>
@@ -250,7 +185,7 @@
                 <exclusion>
                   <groupId>commons-logging</groupId>
                   <artifactId>commons-logging-api</artifactId>
-                </exclusion>                
+                </exclusion>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-math3</artifactId>
@@ -290,7 +225,7 @@
                 <exclusion>
                   <groupId>com.sun.jersey</groupId>
                   <artifactId>jersey-server</artifactId>
-                </exclusion>                
+                </exclusion>
                 <exclusion>
                   <groupId>org.aspectj</groupId>
                   <artifactId>aspectjrt</artifactId>
@@ -299,9 +234,9 @@
                   <groupId>net.java.dev.jets3t</groupId>
                   <artifactId>jets3t</artifactId>
                 </exclusion>
-            </exclusions>                        
+            </exclusions>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-hdfs</artifactId>
@@ -314,7 +249,7 @@
                 <exclusion>
                   <groupId>commons-daemon</groupId>
                   <artifactId>commons-daemon</artifactId>
-                </exclusion>                
+                </exclusion>
                 <exclusion>
                     <groupId>tomcat</groupId>
                     <artifactId>jasper-runtime</artifactId>
@@ -341,34 +276,24 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
-        
 
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.2.1</version>
-            <scope>compile</scope>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-aws</artifactId>
+            <version>${hadoop.version}</version>
         </dependency>
         
         <dependency>
-            <groupId>com.hadoop.gplcompression</groupId>
-            <artifactId>hadoop-lzo</artifactId>
-            <version>0.4.16</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.denodo.connect.hadoop</groupId>
-            <artifactId>denodo-hadoop-commons-5.0</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
+            <groupId>com.denodo.vdp</groupId>
+            <artifactId>denodo-vdp-server-base</artifactId>
+            <version>${vdp.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>net.java.dev.jets3t</groupId>
             <artifactId>jets3t</artifactId>
-            <version>0.9.0</version>
+            <version>${jets3t.version}</version>
             <scope>compile</scope>
         </dependency>
 
