--- a/hbase/hbase-customwrapper-6.0/pom.xml
+++ b/hbase/hbase-customwrapper-6.0/pom.xml
@@ -7,7 +7,7 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>denodo-hbase-customwrapper-5.0</artifactId>
+    <artifactId>denodo-hbase-customwrapper-6.0</artifactId>
     <version>20160121</version>
     <packaging>jar</packaging>
     <name>denodo-hbase-customwrapper</name>
@@ -31,26 +31,21 @@
                     <include>NOTICE.txt</include>
                 </includes>
             </resource>
+            
             <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
+                <directory>../hbase-customwrapper-5.0/src/main/resources</directory>
             </resource>
         </resources>
 
+        <sourceDirectory>../hbase-customwrapper-5.0/src/main/java</sourceDirectory>
         <!-- ============================================================== -->
         <!-- Test-related directory locations -->
         <!-- ============================================================== -->
-        <testSourceDirectory>src/test/java</testSourceDirectory>
-        <testOutputDirectory>target/test-classes</testOutputDirectory>
+        <testSourceDirectory>../hbase-customwrapper-5.0/src/test/java</testSourceDirectory>
+        <testOutputDirectory>../hbase-customwrapper-5.0/target/test-classes</testOutputDirectory>
         <testResources>
             <testResource>
-                <directory>src/test/resources</directory>
+                <directory>../hbase-customwrapper-5.0/src/test/resources</directory>
             </testResource>
         </testResources>
         <plugins>
@@ -64,8 +59,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <!-- VDP 6.0 requires 1.7 -->
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -105,8 +101,9 @@
                         <Extension-Name>${project.artifactId}</Extension-Name>
                         <Extension-Description>${project.name}</Extension-Description>
                         <Extension-Version>${project.version}</Extension-Version>
-                        <Extension-Target-Version>5.0</Extension-Target-Version>
-                        <Extension-Target-Update>20130103</Extension-Target-Update>
+                        <Extension-Target-Version>6.0</Extension-Target-Version>
+                        <!-- Uncomment when an update of VDP 5.5 is required -->
+                       <!-- <Extension-Target-Update>20140826</Extension-Target-Update> -->
                         <Extension-Website>http://support.denodo.com</Extension-Website>
                       </manifestEntries>
                     </manifestSection>
@@ -182,28 +179,21 @@
         <dependency>
             <groupId>com.denodo.commons</groupId>
             <artifactId>denodo-util</artifactId>
-            <version>2.79</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.denodo.commons</groupId>
-            <artifactId>denodo-store</artifactId>
-            <version>1.4</version>
+            <version>2.94</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.denodo.vdp</groupId>
             <artifactId>denodo-vdp-server-base</artifactId>
-            <version>5.0.0_4</version>
+            <version>5.5.0</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.denodo.vdp</groupId>
             <artifactId>denodo-vdp-server-ext</artifactId>
-            <version>5.0.0_4</version>
+            <version>5.5.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- *** -->
@@ -342,7 +332,7 @@
         
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
-            <artifactId>denodo-hadoop-commons-5.0</artifactId>
+            <artifactId>denodo-hadoop-commons-6.0</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
             <exclusions>
@@ -355,7 +345,7 @@
                     <artifactId>hadoop-hdfs</artifactId>
                 </exclusion>            
             </exclusions>
-        </dependency>
+        </dependency>      
         
     </dependencies>
 </project>
