--- a/hdfs/hdfs-customwrapper-5.5/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.5/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper-5.5</artifactId>
-    <version>20151207</version>
+    <version>20160121</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
@@ -342,8 +342,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
-        
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -361,7 +359,7 @@
 
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
-            <artifactId>denodo-hdfs-lib</artifactId>
+            <artifactId>denodo-hadoop-commons-5.5</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
