--- a/hdfs/hdfs-customwrapper-6.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-6.0/pom.xml
@@ -7,15 +7,14 @@
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>denodo-hbase-customwrapper-5.0</artifactId>
+    <artifactId>denodo-hdfs-customwrapper-6.0</artifactId>
     <version>20160121</version>
     <packaging>jar</packaging>
-    <name>denodo-hbase-customwrapper</name>
+    <name>denodo-hdfs-customwrapper</name>
 
     <properties>
+        <avro.version>1.7.7</avro.version>
         <hadoop.version>2.6.0</hadoop.version>
-        <hbase.version>0.96.2-hadoop2</hbase.version>
-        <zookeeper.version>3.4.5</zookeeper.version>
     </properties>
 
     <!-- *************************** -->
@@ -31,41 +30,29 @@
                     <include>NOTICE.txt</include>
                 </includes>
             </resource>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
         </resources>
 
+         <sourceDirectory>../hdfs-customwrapper-5.0/src/main/java</sourceDirectory> 
         <!-- ============================================================== -->
         <!-- Test-related directory locations -->
         <!-- ============================================================== -->
-        <testSourceDirectory>src/test/java</testSourceDirectory>
+        <testSourceDirectory>../hdfs-customwrapper-5.0/src/test/java</testSourceDirectory>
         <testOutputDirectory>target/test-classes</testOutputDirectory>
         <testResources>
             <testResource>
-                <directory>src/test/resources</directory>
+                <directory>../hdfs-customwrapper-5.0/src/test/resources</directory>
             </testResource>
         </testResources>
         <plugins>
-            <!-- ========================================================== -->
-            <!-- Compiler plugin -->
-            <!-- * Set the Java version (source and bytecode) to J2SE 6 -->
-            <!-- * Other possible values if required: "1.4" | "1.5" -->
-            <!-- ========================================================== -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <!-- VDP 6.0 requires 1.7 -->
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>US-ASCII</encoding>
                 </configuration>
             </plugin>
             <plugin>
@@ -105,28 +92,23 @@
                         <Extension-Name>${project.artifactId}</Extension-Name>
                         <Extension-Description>${project.name}</Extension-Description>
                         <Extension-Version>${project.version}</Extension-Version>
-                        <Extension-Target-Version>5.0</Extension-Target-Version>
-                        <Extension-Target-Update>20130103</Extension-Target-Update>
+                        <Extension-Target-Version>6.0</Extension-Target-Version>
+                        <!-- Uncomment when an update of VDP 5.5 is required -->
+                       <!-- <Extension-Target-Update>20140826</Extension-Target-Update> -->
                         <Extension-Website>http://support.denodo.com</Extension-Website>
                       </manifestEntries>
                     </manifestSection>
                   </manifestSections>
                 </archive>
               </configuration>
-            </plugin>
-
+            </plugin>            
+        
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-shade-plugin</artifactId>
-              <version>2.3</version>
-              <executions>
-                <execution>
-                  <phase>package</phase>
-                  <goals>
-                    <goal>shade</goal>
-                  </goals>
-                  <configuration>
-                    <outputFile>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</outputFile>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                     <finalName>${project.artifactId}-${project.version}-jar-with-dependencies</finalName>
                     <filters>
                       <filter>
                         <artifact>*:*</artifact>
@@ -134,34 +116,57 @@
                           <exclude>META-INF/maven/**/*</exclude>
                         </excludes>
                       </filter>
-                    </filters>
-                  </configuration>
-                </execution>
-              </executions>
+                    </filters>                     
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                            <!--Symptom: 
+                                Custom wrapper throws "IOException: No FileSystem for scheme: 
+                                hdfs" because differents JARs (hadoop-commons for LocalFileSystem, hadoop-hdfs 
+                                for DistributedFileSystem) each contain a different file called org.apache.hadoop.fs.FileSystem 
+                                in their META-INFO/services directory. When we use maven-assembly, it merges 
+                                all our JARs into one, and all META-INFO/services/org.apache.hadoop.fs.FileSystem 
+                                overwrite each-other. Only one of these files remains (the last one that 
+                                was added). In this case, the Filesystem list from hadoop-commons overwrites 
+                                the list from hadoop-hdfs, so DistributedFileSystem was no longer declared. 
+                                
+                                Solution: 
+                                Use maven-shade plugin to merge services files when building JAR 
+                                with dependencies -->
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-assembly-plugin</artifactId>
-              <version>2.2-beta-5</version>
-              <executions>
-                <execution>
-                  <id>make-assembly-dist</id>
-                  <phase>package</phase>
-                  <goals>
-                    <goal>attached</goal>
-                  </goals>
-                  <configuration>
-                    <descriptors>
-                      <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
-                    </descriptors>
-                    <appendAssemblyId>true</appendAssemblyId>
-                    <finalName>${project.artifactId}-${project.version}</finalName>
-                  </configuration>
-                </execution>
-              </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2-beta-5</version>
+                 <executions>
+                    <execution>
+                        <id>make-assembly-dist</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>${basedir}/src/main/assembly/dist.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>true</appendAssemblyId>
+                            <finalName>${project.artifactId}-${project.version}</finalName>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
-
         </plugins>
     </build>
 
@@ -171,7 +176,6 @@
     <!-- DEPENDENCIES -->
     <!-- ****************************************************************** -->
     <dependencies>
-        <!-- Custom Wrapper necessary libraries -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -179,34 +183,53 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--Custom Wrapper required libraries -->
         <dependency>
             <groupId>com.denodo.commons</groupId>
             <artifactId>denodo-util</artifactId>
-            <version>2.79</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.denodo.commons</groupId>
-            <artifactId>denodo-store</artifactId>
-            <version>1.4</version>
+            <version>2.94</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.denodo.vdp</groupId>
             <artifactId>denodo-vdp-server-base</artifactId>
-            <version>5.0.0_4</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.denodo.vdp</groupId>
-            <artifactId>denodo-vdp-server-ext</artifactId>
-            <version>5.0.0_4</version>
+            <version>5.5.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- *** -->
+
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>${avro.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.netty</groupId>
+                    <artifactId>netty</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty-util</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -228,7 +251,7 @@
                 <exclusion>
                   <groupId>commons-logging</groupId>
                   <artifactId>commons-logging-api</artifactId>
-                </exclusion>
+                </exclusion>                
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-math3</artifactId>
@@ -277,85 +300,76 @@
                   <groupId>net.java.dev.jets3t</groupId>
                   <artifactId>jets3t</artifactId>
                 </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
-            <version>${hbase.version}</version>
-            <exclusions>
-                <exclusion>
-                  <groupId>com.sun.jersey</groupId>
-                  <artifactId>jersey-core</artifactId>
-                </exclusion>
-                <exclusion>
-                  <groupId>com.sun.jersey</groupId>
-                  <artifactId>jersey-json</artifactId>
-                </exclusion>
-                <exclusion>
-                  <groupId>com.sun.jersey</groupId>
-                  <artifactId>jersey-server</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-
-        <dependency>
-        	<groupId>org.apache.zookeeper</groupId>
-        	<artifactId>zookeeper</artifactId>
-        	<version>${zookeeper.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.jboss.netty</groupId>
-                    <artifactId>netty</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-        	<groupId>org.apache.thrift</groupId>
-        	<artifactId>libfb303</artifactId>
-        	<version>0.9.0</version>
-        </dependency>        
-        
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20090211</version>
+            </exclusions>                        
         </dependency>
         
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-hdfs</artifactId>
+            <version>${hadoop.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>commons-cli</groupId>
+                    <artifactId>commons-cli</artifactId>
+                </exclusion>
+                <exclusion>
+                  <groupId>commons-daemon</groupId>
+                  <artifactId>commons-daemon</artifactId>
+                </exclusion>                
+                <exclusion>
+                    <groupId>tomcat</groupId>
+                    <artifactId>jasper-runtime</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet.jsp</groupId>
+                    <artifactId>jsp-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>jetty-util</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>hsqldb</groupId>
+                    <artifactId>hsqldb</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>    
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.2.1</version>
+            <scope>compile</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.hadoop.gplcompression</groupId>
+            <artifactId>hadoop-lzo</artifactId>
+            <version>0.4.16</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
-            <artifactId>denodo-hadoop-commons-5.0</artifactId>
+            <artifactId>denodo-hadoop-commons-6.0</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                     <groupId>org.apache.avro</groupId>
-                    <artifactId>avro-mapred</artifactId>
-                </exclusion>               
-                <exclusion>
-                     <groupId>org.apache.hadoop</groupId>
-                    <artifactId>hadoop-hdfs</artifactId>
-                </exclusion>            
-            </exclusions>
         </dependency>
-        
+
+        <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>jets3t</artifactId>
+            <version>0.9.0</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 </project>
