--- a/mapreduce/mapreduce-customwrapper-6.0/pom.xml
+++ b/mapreduce/mapreduce-customwrapper-6.0/pom.xml
@@ -1,29 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <!-- *************************** -->
     <!-- BASIC PROJECT INFO -->
     <!-- *************************** -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
-    <artifactId>denodo-hbase-customwrapper-5.0</artifactId>
+    <artifactId>denodo-mapreduce-customwrapper-6.0</artifactId>
     <version>20160121</version>
     <packaging>jar</packaging>
-    <name>denodo-hbase-customwrapper</name>
+    <name>denodo-mapreduce-customwrapper</name>
 
-    <properties>
+  <properties>
         <hadoop.version>2.6.0</hadoop.version>
-        <hbase.version>0.96.2-hadoop2</hbase.version>
-        <zookeeper.version>3.4.5</zookeeper.version>
-    </properties>
+  </properties>
+
 
     <!-- *************************** -->
     <!-- BUILD INFO -->
     <!-- *************************** -->
     <build>
         <resources>
-            <resource>
+             <resource>
                 <directory>.</directory>
                 <targetPath>META-INF</targetPath>
                 <includes>
@@ -31,41 +29,38 @@
                     <include>NOTICE.txt</include>
                 </includes>
             </resource>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.xml</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
         </resources>
 
+        <sourceDirectory>../mapreduce-customwrapper-5.0/src/main/java</sourceDirectory>
         <!-- ============================================================== -->
         <!-- Test-related directory locations -->
         <!-- ============================================================== -->
-        <testSourceDirectory>src/test/java</testSourceDirectory>
-        <testOutputDirectory>target/test-classes</testOutputDirectory>
+
+        <testSourceDirectory>../mapreduce-customwrapper-5.0/src/test/java</testSourceDirectory>
+        <testOutputDirectory>../mapreduce-customwrapper-5.0/target/test-classes</testOutputDirectory>
+
         <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-            </testResource>
+          <testResource>
+              <directory>../mapreduce-customwrapper-5.0/src/test/resources</directory>
+          </testResource>
         </testResources>
+
         <plugins>
+
             <!-- ========================================================== -->
             <!-- Compiler plugin -->
-            <!-- * Set the Java version (source and bytecode) to J2SE 6 -->
-            <!-- * Other possible values if required: "1.4" | "1.5" -->
+            <!--  * Set the Java version (source and bytecode) to J2SE 6 -->
+            <!--  * Other possible values if required: "1.4" | "1.5" -->
             <!-- ========================================================== -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <!-- VDP 6.0 requires 1.7 -->
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>US-ASCII</encoding>
                 </configuration>
             </plugin>
             <plugin>
@@ -90,7 +85,7 @@
                     </execution>
                 </executions>
             </plugin>
-
+            
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
@@ -105,28 +100,23 @@
                         <Extension-Name>${project.artifactId}</Extension-Name>
                         <Extension-Description>${project.name}</Extension-Description>
                         <Extension-Version>${project.version}</Extension-Version>
-                        <Extension-Target-Version>5.0</Extension-Target-Version>
-                        <Extension-Target-Update>20130103</Extension-Target-Update>
+                        <Extension-Target-Version>6.0</Extension-Target-Version>
+                        <!-- Uncomment when an update of VDP 5.5 is required -->
+                       <!-- <Extension-Target-Update>20140826</Extension-Target-Update> -->
                         <Extension-Website>http://support.denodo.com</Extension-Website>
                       </manifestEntries>
                     </manifestSection>
                   </manifestSections>
                 </archive>
               </configuration>
-            </plugin>
+            </plugin>                        
 
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-shade-plugin</artifactId>
-              <version>2.3</version>
-              <executions>
-                <execution>
-                  <phase>package</phase>
-                  <goals>
-                    <goal>shade</goal>
-                  </goals>
-                  <configuration>
-                    <outputFile>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</outputFile>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                     <finalName>${project.artifactId}-${project.version}-jar-with-dependencies</finalName>
                     <filters>
                       <filter>
                         <artifact>*:*</artifact>
@@ -134,10 +124,34 @@
                           <exclude>META-INF/maven/**/*</exclude>
                         </excludes>
                       </filter>
-                    </filters>
-                  </configuration>
-                </execution>
-              </executions>
+                    </filters>                                          
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                            <!--Symptom: 
+                                Custom wrapper throws "IOException: No FileSystem for scheme: 
+                                hdfs" because differents JARs (hadoop-commons for LocalFileSystem, hadoop-hdfs 
+                                for DistributedFileSystem) each contain a different file called org.apache.hadoop.fs.FileSystem 
+                                in their META-INFO/services directory. When we use maven-assembly, it merges 
+                                all our JARs into one, and all META-INFO/services/org.apache.hadoop.fs.FileSystem 
+                                overwrite each-other. Only one of these files remains (the last one that 
+                                was added). In this case, the Filesystem list from hadoop-commons overwrites 
+                                the list from hadoop-hdfs, so DistributedFileSystem was no longer declared. 
+                                
+                                Solution: 
+                                Use maven-shade plugin to merge services files when building JAR 
+                                with dependencies -->
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -171,7 +185,6 @@
     <!-- DEPENDENCIES -->
     <!-- ****************************************************************** -->
     <dependencies>
-        <!-- Custom Wrapper necessary libraries -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -179,34 +192,13 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.denodo.commons</groupId>
-            <artifactId>denodo-util</artifactId>
-            <version>2.79</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.denodo.commons</groupId>
-            <artifactId>denodo-store</artifactId>
-            <version>1.4</version>
-            <scope>provided</scope>
-        </dependency>
-
+        <!-- Custom Wrapper necessary libraries  -->
         <dependency>
             <groupId>com.denodo.vdp</groupId>
             <artifactId>denodo-vdp-server-base</artifactId>
-            <version>5.0.0_4</version>
+            <version>5.5.0</version>
             <scope>provided</scope>
         </dependency>
-
-        <dependency>
-            <groupId>com.denodo.vdp</groupId>
-            <artifactId>denodo-vdp-server-ext</artifactId>
-            <version>5.0.0_4</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- *** -->
 
         <dependency>
             <groupId>org.apache.hadoop</groupId>
@@ -228,7 +220,7 @@
                 <exclusion>
                   <groupId>commons-logging</groupId>
                   <artifactId>commons-logging-api</artifactId>
-                </exclusion>
+                </exclusion>                
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
                     <artifactId>commons-math3</artifactId>
@@ -277,85 +269,41 @@
                   <groupId>net.java.dev.jets3t</groupId>
                   <artifactId>jets3t</artifactId>
                 </exclusion>
-            </exclusions>
+            </exclusions>                        
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.hbase</groupId>
-            <artifactId>hbase-client</artifactId>
-            <version>${hbase.version}</version>
-            <exclusions>
-                <exclusion>
-                  <groupId>com.sun.jersey</groupId>
-                  <artifactId>jersey-core</artifactId>
-                </exclusion>
-                <exclusion>
-                  <groupId>com.sun.jersey</groupId>
-                  <artifactId>jersey-json</artifactId>
-                </exclusion>
-                <exclusion>
-                  <groupId>com.sun.jersey</groupId>
-                  <artifactId>jersey-server</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+	  	<dependency>
+	    	<groupId>commons-lang</groupId>
+	    	<artifactId>commons-lang</artifactId>
+	    	<version>2.6</version>
+	  	</dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.6.1</version>
-        </dependency>
+	  	<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>0.1.50</version>
+		</dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.1</version>
-        </dependency>
-
-        <dependency>
-        	<groupId>org.apache.zookeeper</groupId>
-        	<artifactId>zookeeper</artifactId>
-        	<version>${zookeeper.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.jboss.netty</groupId>
-                    <artifactId>netty</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-        	<groupId>org.apache.thrift</groupId>
-        	<artifactId>libfb303</artifactId>
-        	<version>0.9.0</version>
-        </dependency>        
-        
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20090211</version>
-        </dependency>
-        
         <dependency>
             <groupId>com.denodo.connect.hadoop</groupId>
-            <artifactId>denodo-hadoop-commons-5.0</artifactId>
+            <artifactId>denodo-hadoop-commons-6.0</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                     <groupId>org.apache.avro</groupId>
-                    <artifactId>avro-mapred</artifactId>
-                </exclusion>               
-                <exclusion>
-                     <groupId>org.apache.hadoop</groupId>
-                    <artifactId>hadoop-hdfs</artifactId>
-                </exclusion>            
-            </exclusions>
         </dependency>
         
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.9-RC1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>dom4j</groupId>
+                    <artifactId>dom4j</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>        
+
     </dependencies>
+
+
 </project>
