--- a/hdfs/hdfs-customwrapper-6.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-6.0/pom.xml
@@ -193,8 +193,8 @@
 
         <dependency>
             <groupId>com.denodo.vdp</groupId>
-            <artifactId>denodo-vdp-server-base</artifactId>
-            <version>5.5.0</version>
+            <artifactId>denodo-vdp-server</artifactId>
+            <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- *** -->
