--- a/commons/hadoop-commons-5.0/pom.xml
+++ b/commons/hadoop-commons-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hadoop-commons-5.0</artifactId>
-    <version>20170111</version>
+    <version>20170214</version>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
@@ -272,6 +272,10 @@
                     <groupId>hsqldb</groupId>
                     <artifactId>hsqldb</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>xerces</groupId>
+                    <artifactId>xercesImpl</artifactId>
+                </exclusion>                 
             </exclusions>
         </dependency>
 
