--- a/commons/hadoop-commons-5.0/pom.xml
+++ b/commons/hadoop-commons-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hadoop-commons-5.0</artifactId>
-    <version>20170214</version>
+    <version>20170307</version>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
 
@@ -167,7 +167,13 @@
             <version>${commons-csv.version}</version>
             <scope>compile</scope>
         </dependency>        
-
+        
+        <dependency>
+            <groupId>org.apache.parquet</groupId>
+            <artifactId>parquet-hadoop</artifactId>
+            <version>${parquet.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
