--- a/hdfs/hdfs-customwrapper-5.0/pom.xml
+++ b/hdfs/hdfs-customwrapper-5.0/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect.hadoop</groupId>
     <artifactId>denodo-hdfs-customwrapper-5.0</artifactId>
-    <version>20180712</version>
+    <version>20180918</version>
     <packaging>jar</packaging>
     <name>denodo-hdfs-customwrapper</name>
 
@@ -20,8 +20,10 @@
         <hadoop.version>2.9.1</hadoop.version>
         <hadoop.lzo.version>0.4.20</hadoop.lzo.version>
         <httpclient.version>4.5.2</httpclient.version> <!-- minimin required by aws-sdk  -->
-        <httpcore.version>4.4.4</httpcore.version>          
+        <httpcore.version>4.4.4</httpcore.version>    
+        <jackson.version>2.9.4</jackson.version> 
         <jets3t.version>0.9.4</jets3t.version>
+        <jetty.version>6.1.26</jetty.version>
         <log4j.version>1.2.15</log4j.version> 
         <slf4j.version>1.7.10</slf4j.version>       
         <vdp.version>5.0.0_2</vdp.version>
@@ -335,7 +337,39 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>             
-        </dependency>          
+        </dependency>    
+
+         <!-- >An incorrect version of jackson causes: java.lang.NoClassDefFoundError: Could not initialize class com.amazonaws.ClientConfiguration -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>    
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>         
+
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-azure-datalake</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-azure</artifactId>
+            <version>${hadoop.version}</version>
+        </dependency>  
+
+     <!--   HADOOP-9471 hadoop-client wrongfully excludes jetty-util JAR               -->           
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>      
         
         <dependency> 
             <groupId>org.apache.httpcomponents</groupId>
